--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "webpack": "^1.14.0"
   },
   "dependencies": {
+    "express": "^4.14.0",
+    "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.1"
