--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "marquez.ANGEL portfolio site",
   "main": "index.js",
   "scripts": {
+    "watch": "webpack -d --watch",
+    "build": "webpack",
+    "serve": "serve ./public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +25,7 @@
   },
   "homepage": "https://github.com/rezurrector/2017#readme",
   "devDependencies": {
+    "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
@@ -30,6 +34,7 @@
   },
   "dependencies": {
     "express": "^4.14.0",
+    "history": "^4.5.1",
     "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
